crates/nx-syntax/tests/fixtures/invalid/missing_parenthesis.nx
// Missing closing parenthesis
fn calculate(x: int {
    x * 2
}
